# school_assignment_embedded_LCD

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  ad-displayer.c  ad-displayer.h  application.c  application.h  companies.c  companies.h  company-manager.c  company-manager.h  company-storage.c  company-storage.h  error-handler.c  error-handler.h  hash-table.c  hash-table.h  inlUppgift.c  insertion-sort.c  insertion-sort.h  lcd-screen.c  lcd-screen.h  macros.h  setup.c  setup.h  status.h  utils.c  utils.h
