idf_component_register(SRCS "ad-displayer.c" "company-storage.c" "error-handler.c" "company-manager.c" "inlUppgift.c" "lcd-screen.c" "companies.c" "application.c" "utils.c" 
"company-manager.c" "company-storage.c" "utils.c" "error-handler.c" "setup.c" "ad-displayer.c"
                    INCLUDE_DIRS ".")
